k8s/base/mlops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-ingress
  namespace: mlops
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: airflow.thinhopsops.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080
    - host: mlflow.thinhopsops.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow-tracking-svc
                port:
                  number: 80
  tls:
    - hosts:
        - airflow.thinhopsops.win
        - mlflow.thinhopsops.win
      secretName: cloudflare-origin-tls
